--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="items one"></div>
-      <div class="items two"></div>
-      <div class="items three"></div>
-      <div class="items four"></div>
-      <div class="items five"></div>
-      <div class="items six"></div>
-      <div class="items seven"></div>
-      <div class="items eight"></div>
-    </div>
+    <main class="conntent">
+        <div class="container">
+            <div class="items one"></div>
+            <div class="items two"></div>
+            <div class="items three"></div>
+            <div class="items four"></div>
+            <div class="items five"></div>
+            <div class="items six"></div>
+            <div class="items seven"></div>
+            <div class="items eight"></div>
+          </div>
+
+
+    </main>
+   
   </body>
 </html>
